<resources>
    <string name="app_name">TB</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_emailzz">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logged_in_successfully">"Login success"</string>
    <string name="Login_to_your_Account">"Login to your account"</string>
    <string name="password">password</string>
    <string name="have_no_account">Don’t_have_an_account? </string>
    <string name="Sign_up">signup</string>
    <string name="Login">login</string>
    <string name="map_me_button_text">Map the bus</string>
    <string name="map_stop_button_text">Stop Map</string>
    <string name="next">Next</string>
    <string name="no_permission_warning">The application requires permission to access your location.</string>
    <string name="null_location_message">Not available</string>
    <string name="current_location">Bus Location</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="map_me">Map Me</string>
    <string name="text_me">Text Me</string>
    <string name="default_location_text">(15, -30.6)</string>
    <string name="english">english</string>
    <string name="french">french</string>
    <string name="longitude_label_text">Longitude:</string>
    <string name="default_longitude">1.125593</string>
    <string name="default_latitude">1.125593</string>
    <string name="latitude_label_text">Latitude:</string>
    <string name="message"> Hey! the current bus coordinates are: \nLatitude = %f, \nLongitude  = %f. </string>
    <string name="no_coordinates">¯\_(⊙︿⊙)_/¯</string>
    <string name="no_thanks_text">No thanks</string>
    <string name="continue_text">Continue</string>
    <string name="location_not_enabled">Location not enable. Please continue to enable.</string>
    <string name="location_perm_msg_desc">This app will need your location permission</string>
    <string name="text_me_button_text">Text Me</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="switchFrench">French</string>
    <string name="route1">Route1</string>
    <string name="route2">Route2</string>
    <string name="route3">Route3</string>
    <string name="route_1">route_1</string>
    <string name="bus_location">bus_location</string>
    <string name="location">location</string>
    <string name="api_key">AIzaSyBqHa8UZpxjtdSgSARvBed9FusMV4fGsqM</string>
    <string name="English">English</string>

    <string name="channel_name">channel Name</string>
    <string name="channel_description">channel description</string>
    <string name="email_is_required">email_is_required</string>
    <string name="password_is_required">password_is_required</string>
    <string name="Select_your_route">Select_your_route</string>
    <string name="Select_your_departure_time">Select_your_departure_time</string>
    <string name="Marker_in_Sydney">Marker_in_Sydney</string>
    <string name="verification_email_has_been_sent">verification_email_has_been_sent</string>
    <string name="choose_your_answer">choose_your_answer</string>
    <string name="select_your_preferred_time">select_your_preferred_time</string>
    <string name="when_to_notify_you">when_to_notify_you</string>
    <string name="default_toast_message">default_toast_message</string>
    <string name="Start_LocationPermissionRequest_as_there_is_no_permission_to_get_location">LocationPermissionRequest</string>
    <string name="onCreate_LocationPermissionRequest">onCreate_LocationPermissionRequest</string>
    <string name="permission_had_previously_been_granted_for_location_access">permission_had_previously_been_granted_for_location_access</string>
</resources>
