<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#964B00"
    tools:context=".entities.bus_mapping.MapBusActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/latitude_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/latitude_label_text"
                android:textAlignment="textEnd"
                android:textSize="20dp"
                android:textColor="#0000ff"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/latitude_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:padding="1dp"
                android:text="@string/default_latitude"
                android:textAlignment="textStart"
                android:textSize="20dp"
                android:textColor="#0000ff"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/longitude_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:padding="10dp"
                android:text="@string/longitude_label_text"
                android:textAlignment="textEnd"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="20sp"
                android:textColor="#0000ff"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/longitude_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:fontFamily="monospace"
                android:padding="1dp"
                android:text="@string/default_longitude"
                android:textAlignment="textStart"
                android:textColor="#0000ff"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <FrameLayout
                android:id="@+id/map_location"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="2dp"
                android:paddingRight="2dp">

            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:showDividers="middle">

            <Button
                android:id="@+id/map_me_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:backgroundTint="#0000ff"
                android:padding="10dp"
                android:text="@string/map_me_button_text"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />


        </LinearLayout>

        <Button
            android:id="@+id/text_me_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:backgroundTint="#0000ff"
            android:padding="10dp"
            android:text="@string/text_me_button_text"
            android:textColor="#ffffff"
            android:textSize="20sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>