<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".bus_mapping.StudentBusActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:cardElevation="10dp"
            app:cardCornerRadius="20dp"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardMaxElevation="12dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView

                    android:id="@+id/latitude_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:text="@string/latitude_label_text"
                    android:fontFamily="monospace"
                    android:textAlignment="textEnd"
                    android:textSize="17sp"
                    android:textColor="#6D6D6D"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/latitude_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:padding="1dp"
                    android:textAlignment="textStart"
                    android:textSize="17sp"
                    android:textColor="#6FCF97"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/longitude_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:padding="26dp"
                    android:text="@string/longitude_label_text"
                    android:layout_marginTop="40dp"
                    android:textAlignment="textEnd"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="17sp"
                    android:textColor="#6D6D6D"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/longitude_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:fontFamily="monospace"
                    android:padding="1dp"

                    android:textAlignment="textStart"
                    android:textColor="#6FCF97"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="17sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <FrameLayout
                android:id="@+id/map_location"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="2dp"
                android:paddingRight="2dp">

            </FrameLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:showDividers="middle">

            <Button
                android:id="@+id/map_me_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="180dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginRight="60dp"
                android:backgroundTint="#6FCF97"
                android:padding="10dp"
                android:text="@string/map_me_button_text"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/btnStop"

                android:layout_width="180dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="90dp"
                android:backgroundTint="#6FCF97"
                android:padding="10dp"
                android:text="Next"
                android:textColor="#ffffff" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>